--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -143,17 +143,20 @@
                     app:layout_constraintEnd_toEndOf="parent"/>
 
                 <!-- Kerékpárok RecyclerView -->
+
+                <!-- Második vízszintes elválasztó vonal -->
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view_bikes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    app:layout_constraintTop_toBottomOf="@id/bikes"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="10dp"
+                    android:scrollbars="none"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:scrollbars="none"/>
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/bikes" />
 
-                <!-- Második vízszintes elválasztó vonal -->
                 <View
                     android:id="@+id/horizontal_line2"
                     android:layout_width="0dp"
@@ -236,21 +239,48 @@
                     app:layout_constraintWidth_percent="0.9" />
 
                 <!-- "Rides" szekció -->
-                <TextView
-                    android:id="@+id/rides"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/rides_text_button_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:layout_marginStart="20dp"
-                    android:text="Rides"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/lalezar_regular"
-                    android:textSize="15pt"
-                    android:textColor="#000000"
-                    android:textAlignment="viewStart"
-                    app:layout_constraintTop_toBottomOf="@id/horizontal_line3"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    android:padding="0dp"
+                    tools:ignore="HardcodedText"
+                    app:layout_constraintTop_toBottomOf="@id/horizontal_line3">
+
+                    <TextView
+                        android:id="@+id/rides_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:fontFamily="@font/lalezar_regular"
+                        android:text="Rides"
+                        android:textAlignment="center"
+                        android:gravity="center"
+                        android:textColor="#000000"
+                        android:textSize="15pt"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/add_rides_button" />
+
+                    <ImageButton
+                        android:id="@+id/add_rides_button"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_marginStart="15dp"
+                        android:background="@null"
+                        android:scaleType="fitCenter"
+                        android:contentDescription="Parts_adding_button"
+                        android:src="@drawable/parts_adding_button"
+                        app:layout_constraintStart_toEndOf="@id/rides_text"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintVertical_bias="0.5" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <!-- Edzések RecyclerView -->
                 <androidx.recyclerview.widget.RecyclerView
@@ -260,7 +290,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginStart="30dp"
-                    app:layout_constraintTop_toBottomOf="@id/rides"
+                    app:layout_constraintTop_toBottomOf="@id/rides_text_button_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:scrollbars="none"/>
