--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -24,8 +24,8 @@
 
             <ImageButton
                 android:id="@+id/account_button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_marginEnd="10dp"
                 android:background="@null"
                 android:contentDescription="accountButton"
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="BicyclePartsTracker"
-                android:textSize="14pt"
+                android:textSize="30sp"
                 android:textColor="#6A6A6A"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -135,7 +135,7 @@
                     android:text="Bikes"
                     android:textStyle="bold"
                     android:fontFamily="@font/lalezar_regular"
-                    android:textSize="15pt"
+                    android:textSize="30sp"
                     android:textColor="#000000"
                     android:textAlignment="viewStart"
                     app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
@@ -150,7 +150,7 @@
                     android:id="@+id/recycler_view_bikes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="20dp"
                     android:scrollbars="none"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -189,7 +189,7 @@
                     android:textAlignment="center"
                     android:gravity="center"
                     android:textColor="#000000"
-                    android:textSize="15pt"
+                    android:textSize="30sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -258,7 +258,7 @@
                         android:textAlignment="center"
                         android:gravity="center"
                         android:textColor="#000000"
-                        android:textSize="15pt"
+                        android:textSize="30sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -287,9 +287,8 @@
                     android:id="@+id/recycler_view_rides"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="10dp"
                     app:layout_constraintTop_toBottomOf="@id/rides_text_button_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
