--- a/app/src/main/res/layout/item_ride.xml
+++ b/app/src/main/res/layout/item_ride.xml
@@ -9,52 +9,53 @@
 
     <TextView
         android:id="@+id/bicycle_text_view"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:text="Bicycle"
+        android:fontFamily="@font/averagesans_regular"
+        android:textSize="18sp"
+        android:layout_marginStart="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
+        android:fontFamily="@font/averagesans_regular"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bicycle_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintTop_toBottomOf="@id/bicycle_text_view" />
 
     <TextView
         android:id="@+id/date_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date"
+        android:fontFamily="@font/averagesans_regular"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintTop_toBottomOf="@id/title_text_view"/>
 
     <TextView
         android:id="@+id/time_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Time"
+        android:fontFamily="@font/averagesans_regular"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/date_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintTop_toBottomOf="@id/date_text_view"/>
 
     <TextView
         android:id="@+id/distance_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Distance"
+        android:fontFamily="@font/averagesans_regular"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/time_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintTop_toBottomOf="@id/time_text_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
