--- a/app/src/main/res/layout/item_ride.xml
+++ b/app/src/main/res/layout/item_ride.xml
@@ -58,4 +58,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/time_text_view"/>
 
+    <TextView
+        android:id="@+id/parts_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Parts: "
+        android:fontFamily="@font/averagesans_regular"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/distance_text_view"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
