--- a/app/src/main/res/layout/activity_bikedetails.xml
+++ b/app/src/main/res/layout/activity_bikedetails.xml
@@ -33,7 +33,7 @@
                 />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/bike_name_layout"
+            android:id="@+id/bike_name_totaldistance_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
@@ -74,9 +74,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:padding="0dp"
-            android:scrollbars="none"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/bike_name_layout"
+            android:scrollbars="none"
+            app:layout_constraintTop_toBottomOf="@id/bike_name_totaldistance_layout"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -89,7 +89,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="0dp"
-                    tools:ignore="HardcodedText">
+                    tools:ignore="HardcodedText,MissingConstraints">
 
                     <TextView
                         android:id="@+id/parts_text"
