--- a/app/src/main/res/layout/activity_bikedetails.xml
+++ b/app/src/main/res/layout/activity_bikedetails.xml
@@ -15,29 +15,49 @@
         android:padding="0dp"
         tools:ignore="HardcodedText">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/home_delete_button_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent">
+
             <ImageButton
                 android:id="@+id/home_button"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="6dp"
+                android:layout_marginStart="10dp"
                 android:background="@null"
                 android:scaleType="fitCenter"
                 android:contentDescription="Logo"
                 android:src="@drawable/home_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintWidth_percent="0.08"
-                app:layout_constraintHeight_percent="0.04"
-                app:layout_constraintHorizontal_bias="0.02"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
+
+            <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="6dp"
+                android:background="@null"
+                android:contentDescription="deleteButton"
+                android:scaleType="fitCenter"
+                android:src="@drawable/delete"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/bike_name_totaldistance_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/home_button">
+            app:layout_constraintTop_toBottomOf="@id/home_delete_button_layout">
 
             <TextView
                 android:id="@+id/bike_name_text_view"
