--- a/app/src/main/res/layout/activity_bikedetails.xml
+++ b/app/src/main/res/layout/activity_bikedetails.xml
@@ -109,7 +109,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="0dp"
-                    tools:ignore="HardcodedText,MissingConstraints">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="HardcodedText">
 
                     <TextView
                         android:id="@+id/parts_text"
@@ -117,16 +120,16 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:fontFamily="@font/lalezar_regular"
+                        android:gravity="center"
                         android:text="Parts"
                         android:textAlignment="center"
-                        android:gravity="center"
                         android:textColor="#000000"
                         android:textSize="30sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/add_parts_button" />
+                        app:layout_constraintEnd_toStartOf="@id/add_parts_button"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageButton
                         android:id="@+id/add_parts_button"
@@ -134,12 +137,12 @@
                         android:layout_height="45dp"
                         android:layout_marginStart="15dp"
                         android:background="@null"
-                        android:scaleType="fitCenter"
                         android:contentDescription="Parts_adding_button"
+                        android:scaleType="fitCenter"
                         android:src="@drawable/parts_adding_button"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/parts_text"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintVertical_bias="0.5" />
 
 
