--- a/app/src/main/res/layout/item_bike.xml
+++ b/app/src/main/res/layout/item_bike.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="15dp"
+    app:cardCornerRadius="17dp"
     app:cardElevation="0dp"
     android:layout_margin="7dp"
-    app:cardBackgroundColor="#FF6626"
+    app:cardBackgroundColor="#59FF6626"
     tools:ignore="HardcodedText">
 
     <LinearLayout
