--- a/app/src/main/res/layout/item_part.xml
+++ b/app/src/main/res/layout/item_part.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="10dp"
+    app:cardCornerRadius="17dp"
+    app:cardElevation="0dp"
+    android:layout_margin="7dp"
+    app:cardBackgroundColor="#59FF6626"
     tools:ignore="HardcodedText">
 
-    <TextView
-        android:id="@+id/part_name_text_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bike Name"
-        android:textSize="18sp"
-        android:fontFamily="@font/averagesans_regular"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/part_distance_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total Distance"
-        android:textSize="15sp"
-        android:fontFamily="@font/averagesans_regular"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/part_name_text_view" />
+        <TextView
+            android:id="@+id/part_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Part Name"
+            android:textSize="20sp"
+            android:fontFamily="@font/averagesans_regular"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/part_distance_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Distance"
+            android:textSize="15sp"
+            android:fontFamily="@font/averagesans_regular"
+            android:textColor="#000000"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/part_name_text_view" />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
